<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.fx.runtime</groupId>
	<artifactId>parent</artifactId>
	<version>4.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<osgi.qualifier>${maven.build.timestamp}</osgi.qualifier>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>

		<dep-org.eclipse.jdt.annotation>2.1.100</dep-org.eclipse.jdt.annotation>
		<dep-org.eclipse.osgi>3.12.0</dep-org.eclipse.osgi>
		<dep-javax.inject>1.0.0</dep-javax.inject>
		<dep-org.eclipse.osgi.services>3.6.0</dep-org.eclipse.osgi.services>
		<dep-com.google.guava>21.0.0</dep-com.google.guava>
		<dep-com.google.inject>3.0.0</dep-com.google.inject>
		<dep-org.apache.commons.lang>2.6.0</dep-org.apache.commons.lang>
		<dep-org.eclipse.core.databinding.observable>1.6.100</dep-org.eclipse.core.databinding.observable>
		<dep-org.eclipse.core.databinding.property>1.6.100</dep-org.eclipse.core.databinding.property>
		<dep-org.eclipse.core.databinding>1.6.100</dep-org.eclipse.core.databinding>
		<dep-junit>4.12</dep-junit>
		<dep-org.eclipse.e4.core.contexts>1.6.0</dep-org.eclipse.e4.core.contexts>
		<dep-org.eclipse.e4.core.services>2.0.100</dep-org.eclipse.e4.core.services>
		<dep-org.eclipse.equinox.preferences>3.7.0</dep-org.eclipse.equinox.preferences>
		<dep-org.apache.log4j>1.2.15</dep-org.apache.log4j>
		<dep-org.eclipse.equinox.common>3.9.0</dep-org.eclipse.equinox.common>
		<dep-org.eclipse.core.jobs>3.9.3</dep-org.eclipse.core.jobs>
		<dep-org.eclipse.equinox.p2.core>2.4.101</dep-org.eclipse.equinox.p2.core>
		<dep-org.eclipse.equinox.p2.operations>2.4.300</dep-org.eclipse.equinox.p2.operations>
		<dep-org.eclipse.equinox.registry>3.6.100</dep-org.eclipse.equinox.registry>
		<dep-org.slf4j.api>1.7.10</dep-org.slf4j.api>
		<dep-org.eclipse.emf.ecore>2.13.0</dep-org.eclipse.emf.ecore>
		<dep-org.eclipse.emf.edit>2.12.0</dep-org.eclipse.emf.edit>
		<dep-org.eclipse.osgi>3.12.100</dep-org.eclipse.osgi>
		<dep-org.eclipse.equinox.app>1.3.400</dep-org.eclipse.equinox.app>
		<dep-org.eclipse.equinox.preferences>3.7.0</dep-org.eclipse.equinox.preferences>
		<dep-org.eclipse.core.commands>3.8.0</dep-org.eclipse.core.commands>

		<plugin-maven-osgi-package-plugin>0.0.1</plugin-maven-osgi-package-plugin>
		<plugin-bnd-maven-plugin>3.5.0</plugin-bnd-maven-plugin>
	</properties>

	<modules>
		<module>core/org.eclipse.fx.core</module>
		<module>core/org.eclipse.fx.core.databinding</module>
		<module>core/org.eclipse.fx.core.di</module>
		<module>core/org.eclipse.fx.core.di.context</module>
		<!-- module>core/org.eclipse.fx.core.di.context.tests</module -->
		<module>core/org.eclipse.fx.core.fxml</module>
		<module>core/org.eclipse.fx.core.guice</module>
		<module>core/org.eclipse.fx.core.junit</module>
		<module>core/org.eclipse.fx.core.log4j</module>
		<module>core/org.eclipse.fx.core.p2</module>
		<module>core/org.eclipse.fx.core.slf4j</module>
		<!-- module>core/org.eclipse.fx.core.tests</module -->
		<module>core/org.eclipse.fx.emf.databinding</module>
		<!-- module>core/org.eclipse.fx.emf.edit.ui.tests</module -->
		<!-- module>core/org.eclipse.fx.formats.svg</module -->
		<module>core/org.eclipse.fx.osgi</module>
		<!-- module>core/org.eclipse.fx.osgi.threex</module -->
		<module>core/org.eclipse.fx.osgi.util</module>

		<!-- UI -->
		<module>ui/org.eclipse.fx.ui.panes</module>
		<module>ui/org.eclipse.fx.ui.controls</module>
		<module>ui/org.eclipse.fx.ui.emf.edit</module>
		<module>ui/org.eclipse.fx.ui.animation</module>
		<module>ui/org.eclipse.fx.ui.databinding</module>
		<module>ui/org.eclipse.fx.ui.di</module>
		<module>ui/org.eclipse.fx.ui.dialogs</module>
		<module>ui/org.eclipse.fx.ui.keybindings</module>

		<module>p2/org.eclipse.fx.target.feature</module>

		<module>p2/org.eclipse.fx.core.repo</module>
		
	</modules>

	<repositories>
		<repository>
			<name>BestSolution e(fx)clipse releases</name>
			<id>efxclipse-releases</id>
			<url>http://maven.bestsolution.at/efxclipse-releases/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>eclipse-cbi-releases</id>
			<url>https://repo.eclipse.org/content/groups/cbi/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<version>${plugin-bnd-maven-plugin}</version>
				<executions>
					<execution>
						<id>default-bnd-process</id>
						<goals>
							<goal>bnd-process</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>false</skip>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- The following configuration is required because bnd-maven-plugin 
				generates the manifest to target/classes/META-INF/MANIFEST.MF but the normal 
				maven-jar-plugin does not use it. If the jar-plugin is patched to pick up 
				the manifest from this location, then the following config is not needed. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>true</failOnError>
					<failOnWarnings>true</failOnWarnings>
					<tags>
						<tag>
							<name>noimplement</name>
							<placement>a</placement>
							<head>@noimplement - This API is only supposed to be referenced</head>
						</tag>
						<tag>
							<name>noreference</name>
							<placement>a</placement>
							<head>@noreference - This API is not finalized and should be treated as an implementation detail</head>
						</tag>
					</tags>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>3.3.0</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>create-eclipse-sources</id>
						<phase>package</phase>
						<goals>
							<goal>bundle</goal>
						</goals>
						<configuration>
							<instructions>
								<Bundle-ManifestVersion>2</Bundle-ManifestVersion>
								<Bundle-Version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.qualifier}</Bundle-Version>
								<Bundle-SymbolicName>${project.artifactId}.source</Bundle-SymbolicName>
								<Eclipse-SourceBundle>${project.artifactId};version="${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi.qualifier}";roots:="."</Eclipse-SourceBundle>
								<Export-Package>!*</Export-Package>
								<Private-Package>!*</Private-Package>
								<Include-Resource>${project.build.sourceDirectory}</Include-Resource>
							</instructions>
							<classifier>sources</classifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>build-server</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.cbi.maven.plugins</groupId>
						<artifactId>eclipse-jarsigner-plugin</artifactId>
						<version>${cbi-plugins.version}</version>
						<executions>
							<execution>
								<id>sign</id>
								<goals>
									<goal>sign</goal>
								</goals>
								<!-- phase>verify</phase -->
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>